--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,11 @@ php:
   - hhvm
 
 
-before_script: Create Directory
+before_script:
+  - mysql -e "CREATE DATABASE IF NOT EXISTS `cms2` DEFAULT CHARACTER SET utf8 COLLATE utf8_general_ci;" -uroot
+  - mysql -e "CREATE USER 'cms'@'localhost' IDENTIFIED BY 'BCv4r2hrfhw4ahrc';" -uroot
+  - mysql -e "GRANT USAGE ON * . * TO 'cms'@'localhost' IDENTIFIED BY 'BCv4r2hrfhw4ahrc' WITH MAX_QUERIES_PER_HOUR 0 MAX_CONNECTIONS_PER_HOUR 0 MAX_UPDATES_PER_HOUR 0 MAX_USER_CONNECTIONS 0 ;" -uroot
+  - mysql -e "GRANT ALL PRIVILEGES ON `cms2` . * TO 'cms'@'localhost';"
 
 script:
   - ./travis_scripts/create_dir.sh
