--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ before_script:
   - composer install
   - mkdir ./assets
   - mkdir ./protected/runtime
-  - mysql -u root -e "CREATE DATABASE IF NOT EXISTS 'cmstest' DEFAULT CHARACTER SET utf8 COLLATE utf8_general_ci;"
-  - mysql -uroot -e "CREATE USER 'cms'@'localhost' IDENTIFIED BY 'BCv4r2hrfhw4ahrc';"
-  - mysql -uroot -e "GRANT USAGE ON * . * TO 'cms'@'localhost' IDENTIFIED BY 'BCv4r2hrfhw4ahrc' WITH MAX_QUERIES_PER_HOUR 0 MAX_CONNECTIONS_PER_HOUR 0 MAX_UPDATES_PER_HOUR 0 MAX_USER_CONNECTIONS 0 ;"
-  - mysql -uroot -e "GRANT ALL PRIVILEGES ON 'cmstest' . * TO 'cms'@'localhost';"
-  - mysql -uroot cmstest < ./DB.sql
-  - mysql -uroot cmstest < ./sql/rights/create.sql
+  - mysql -u root -e "CREATE DATABASE IF NOT EXISTS cmstest DEFAULT CHARACTER SET utf8 COLLATE utf8_general_ci;"
+  - mysql -u root -e "CREATE USER cms@localhost IDENTIFIED BY BCv4r2hrfhw4ahrc;"
+  - mysql -u root -e "GRANT USAGE ON * . * TO cms@localhost IDENTIFIED BY BCv4r2hrfhw4ahrc WITH MAX_QUERIES_PER_HOUR 0 MAX_CONNECTIONS_PER_HOUR 0 MAX_UPDATES_PER_HOUR 0 MAX_USER_CONNECTIONS 0 ;"
+  - mysql -u root -e "GRANT ALL PRIVILEGES ON cmstest . * TO cms@localhost;"
+  - mysql -u root cmstest < ./DB.sql
+  - mysql -u root cmstest < ./sql/rights/create.sql
 
 script:
   - php ./vendor/bin/phpunit ./protected/tests/unit
