--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: php
 
 php:
   - 5.3
+  - 5.4
+  - 5.5
 
 before_script:
   - composer install
@@ -18,3 +20,6 @@ before_script:
 script:
   - cd ./protected/tests
   - phpunit unit/
+
+after_script:
+  - coveralls -v
