--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 	"satooshi/php-coveralls": "dev-master",
         "sebastianbergmann/phpcov": "1.1.0",
         "phpunit/phpunit": "3.7.*",
-	"phpunit/php-invoker": "*",
+	"sebastianbergmann/php-invoker": "*",
 	"phpunit/dbunit": ">=1.2",
 	"phpunit/phpunit-selenium": ">=1.2",
 	"phpunit/phpunit-story": "*"
