--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ before_script:
 
 script:
   - cd ./protected/tests
-  - phpunit --coverage-php coverage.cov unit/
+  - phpunit --coverage-php ../../coverage.cov unit/
 
 after_script:
+  - ls -la
   - coveralls -v
