--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -3,6 +3,6 @@
 repo_token: eKY3FrATsqbdTEMPNDA1ZTPEeY6bQrorY
 service_name: travis-ci
 
-coverage_clover: coverage.cov
-
 src_dir: .
+coverage_clover: coverage.cov
+json_path: coveralls.json
