--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -4,5 +4,5 @@ repo_token: eKY3FrATsqbdTEMPNDA1ZTPEeY6bQrorY
 service_name: travis-ci
 
 src_dir: .
-coverage_clover: coverage.cov
+coverage_clover: clover.xml
 json_path: coveralls.json
