--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_script:
   - mysql -u root -e "GRANT ALL PRIVILEGES ON cmstest . * TO 'cms'@'localhost';"
   - mysql -u root cmstest < ./DB.sql
   - mysql -u root cmstest < ./sql/rights/create.sql
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - java -jar selenium-server.jar &
 
 script:
