--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ php:
   - 5.4
   - 5.5
 
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+
 before_script:
   - composer install
   - export PATH=../../vendor/bin:$PATH
@@ -16,8 +20,6 @@ before_script:
   - mysql -u root -e "GRANT ALL PRIVILEGES ON cmstest . * TO 'cms'@'localhost';"
   - mysql -u root cmstest < ./DB.sql
   - mysql -u root cmstest < ./sql/rights/create.sql
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
   - java -jar selenium-server.jar &
 
 script:
