--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,6 @@ php:
   - 5.4
   - 5.5
 
-addons:
-  sauce_connect:
-    username: "mrbirne"
-    access_key: "930becfc-4cda-4152-a309-3fa01a078814"
-
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
@@ -25,6 +20,7 @@ before_script:
   - mysql -u root -e "GRANT ALL PRIVILEGES ON cmstest . * TO 'cms'@'localhost';"
   - mysql -u root cmstest < ./DB.sql
   - mysql -u root cmstest < ./sql/rights/create.sql
+  - java -jar selenium-server.jar &
 
 script:
   - cd ./protected/tests
