--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ php:
   - 5.4
   - 5.5
 
+addons:
+  sauce_connect:
+    username: "mrbirne"
+    access_key: "930becfc-4cda-4152-a309-3fa01a078814"
+
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
@@ -20,9 +25,6 @@ before_script:
   - mysql -u root -e "GRANT ALL PRIVILEGES ON cmstest . * TO 'cms'@'localhost';"
   - mysql -u root cmstest < ./DB.sql
   - mysql -u root cmstest < ./sql/rights/create.sql
-  - "wget http://selenium-release.storage.googleapis.com/2.41/selenium-server-standalone-2.41.0.jar"
-  - "java -jar selenium-server-standalone-2.41.0.jar > /dev/null &"
-  - sleep 5
 
 script:
   - cd ./protected/tests
