--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ language: php
 php:
   - 5.4
 
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+
 addons:
-  sauce_connect:
-    username: "mrbirne"
-    access_key: "930becfc-4cda-4152-a309-3fa01a078814"
+  firefox: "17.0"
 
 before_script:
   - composer install
@@ -19,10 +21,11 @@ before_script:
   - mysql -u root -e "GRANT ALL PRIVILEGES ON cmstest . * TO 'cms'@'localhost';"
   - mysql -u root cmstest < ./DB.sql
   - mysql -u root cmstest < ./sql/rights/create.sql
+  - java -jar selenium-server.jar
 
 script:
   - cd ./protected/tests
-  - phpunit --coverage-clover ../../clover.xml -c phpunit-travis.xml ./functional/VisitTest.php
+  - phpunit --coverage-clover ../../clover.xml -c phpunit-travis.xml ./functional
 
 after_script:
   - cd ../..
