--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 language: php
 
 php:
+  - 5.3
   - 5.4
-
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-
-addons:
-  firefox: "17.0"
+  - 5.5
 
 before_script:
-  - composer install
+  - COMPOSER=composer-travis.json composer install
   - export PATH=../../vendor/bin:$PATH
   - mkdir ./assets
   - mkdir ./protected/runtime
@@ -21,11 +16,10 @@ before_script:
   - mysql -u root -e "GRANT ALL PRIVILEGES ON cmstest . * TO 'cms'@'localhost';"
   - mysql -u root cmstest < ./DB.sql
   - mysql -u root cmstest < ./sql/rights/create.sql
-  - java -jar selenium-server.jar &
 
 script:
   - cd ./protected/tests
-  - phpunit --coverage-clover ../../clover.xml -c phpunit-travis.xml ./functional
+  - phpunit --coverage-clover ../../clover.xml -c phpunit-travis.xml ./unit
 
 after_script:
   - cd ../..
